--- a/public/partials/genre.html
+++ b/public/partials/genre.html
@@ -56,7 +56,7 @@
         <hr></hr>
       </div>
       <center>
-        <pagination boundary-links="true" total-items="gameCount" page="currentPage" class="pagination-small" max-size="maxSize" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" rotate="false" num-pages="pageCount" on-select-page="setPage(page)"></pagination>
+        <pagination boundary-links="true" total-items="gameCount" page="currentPage" class="pagination-small" max-size="maxSize" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" rotate="false" items-per-page="20" on-select-page="setPage(page)"></pagination>
       </center> 
       <hr></hr>
 
