--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,7 +1,6 @@
 <div class='container marketing'>
-  <div class='row'>
-    <div class='col-md-1'></div>
-    <div class='col-md-10'>
+  <div class='span10'>
+    <div class='row'>
       <h2>
         About Me!
       </h2>
