--- a/public/partials/genre.html
+++ b/public/partials/genre.html
@@ -1,8 +1,8 @@
 
-<div>
-  <div class="row">
-    <div class="span2"></div>
-    <div class="span8">
+<div class="container marketing">
+  <div class="span2"></div>
+  <div class="span8">
+    <div class="row">
       <center>
         <h2>{{header}}</h2>
       </center>
