--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,8 +1,8 @@
 
-<div>
-  <div class="row">
-    <div class="span1"></div>
-    <div class="span8">
+<div class="container marketing">
+  <div class="span1"></div>
+  <div class="span8">
+    <div class="row">
       <center>
         <h2>User Profile</h2>
       </center>
