--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,8 +1,8 @@
-<div>
-  <div class='container marketing'>
+<br /><br />
+<div class='container marketing'>
     <div class='row'>
-      <div class='col-md-1'></div>
-      <div class='col-md-10'>
+      <div class='span1'></div>
+      <div class='span10'>
         <form action='contact' id='contactForm' method='post'>
           <div class='form-group'>
             <input class='form-control' id='name' name='name' placeholder='Name' type='text'>
@@ -22,7 +22,6 @@
       </div>
     </div>
   </div>
-</div>
 
 <script src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
