--- a/public/partials/game-directive.html
+++ b/public/partials/game-directive.html
@@ -9,7 +9,7 @@
   <div class="span6">
     <div class="row">
       <div class="span3 text-left">
-        <a href="games/{{game.appid}}">
+        <a href="#/game/{{game.appid}}">
           {{game.title}}
         </a>
       </div>
