--- a/public/partials/game.html
+++ b/public/partials/game.html
@@ -1,3 +1,5 @@
+<br/>
+<div class="container marketing">
   <div class="row">
     <div class="span2"></div>
     <div class="span10">
@@ -81,3 +83,5 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
