--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,8 +1,8 @@
 
 <div class="container marketing">
-  <div class="span1"></div>
-  <div class="span8">
-    <div class="row">
+  <div class="row">
+    <div class="span2"></div>
+    <div class="span8">
       <center>
         <h2>User Profile</h2>
       </center>
@@ -10,7 +10,52 @@
   </div>
 
   <div class="span10">
-    <game ng-repeat="game in state.currentData"></game>
+    <div class="row" ng-repeat="game in state.currentData">
+      <div class="span2">
+        <a ng-href="#/game/{{game.appid}}">
+          <img ng-src={{game.steam_img_url}} width="150px" title="{{game.title}}" />
+        </a>
+        <br></br><br /><br />
+        <div class="span10"><hr></hr></div>
+      </div>
+      <div class="span6">
+        <div class="row">
+          <div class="span3 text-left">
+            <a href="#/game/{{game.appid}}">
+              {{game.title}}
+            </a>
+          </div>
+          <div class="span3 text-right">
+            <rating value="game.rating" max="4" readonly="true"></rating>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="span2 text-left"><strong>Hours Played:</strong></div>
+          <div class="span1 text-right">{{ game.playtime | number: 2 }}</div>
+          <div class="span2 text-left"><strong>Median Hours Played:</strong></div>
+          <div class="span1 text-right">{{ game.total_median | number: 2 }}</div>
+        </div>
+
+        <div class="row"><div class="span6"><br /></div></div>
+
+        <div class="row">
+          <div class="span6 text-left">
+            <strong>Players also like...</strong>
+          </div>
+        </div>
+        <div class="row">
+          <div ng-repeat="recommGame in game.recomms " class="span1">
+            <a ng-href="#/game/{{recommGame.appid}}">
+              <img ng-src="{{recommGame.imgUrl}}" width="75px" title="{{recommGame.title}}" />
+            </a> 
+          </div>
+        </div>
+      
+        <div class="row"><div class="span6"><br /></div></div>
+      </div>
+    </div>
+
     <center> 
       <pagination boundary-links="true" total-items="state.itemCount" page="state.currentPage" items-per-page="20" class="pagination-small" max-size="10" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" rotate="false" on-select-page="setPage(page)"></pagination>
     </center> 
