--- a/public/partials/game-directive.html
+++ b/public/partials/game-directive.html
@@ -20,6 +20,7 @@
         {{game.total_median | number:2}}
       </div>
     </div>
+    <div class="row"><br /></div>
     <div class="row">
       <div class="span6 text-left">
         <strong>Players also like...</strong>
