--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -22,7 +22,7 @@
         Checkout the recommender and see if there is one that you missed and should try.
       </p>
       <p>
-        <a class="btn" href="genres/25">View details &raquo;</a>
+        <a class="btn" href="#/genres/25">View details &raquo;</a>
       </p>
     </div>
     <div class="span4">
@@ -34,7 +34,7 @@
         the Temple of Elemental Evil?  See if we can find you some new RPGs to play.
       </p>
       <p> 
-        <a class="btn" href="genres/7">View details &raquo;</a>
+        <a class="btn" href="#/genres/7">View details &raquo;</a>
       </p>
     </div>
     <div class="span4">
@@ -46,7 +46,7 @@
         and you may find something new.
       </p>
       <p> 
-        <a class="btn" href="genres/31">View details &raquo;</a>
+        <a class="btn" href="#/genres/31">View details &raquo;</a>
       </p>
     </div>
   </div>
