--- a/public/partials/genre.html
+++ b/public/partials/genre.html
@@ -56,10 +56,24 @@
         <hr></hr>
       </div>
       <center>
-        <pagination boundary-links="true" total-items="gameCount" page="currentPage" class="pagination-small" max-size="maxSize" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" rotate="false" items-per-page="20" on-select-page="setPage(page)"></pagination>
+        <pagination boundary-links="true" total-items="gameCount" page="currentPage" items-per-page="20" class="pagination-small" max-size="10" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" rotate="false" items-per-page="20" on-select-page="setPage(page)"></pagination>
       </center> 
       <hr></hr>
 
+    </div>
+  </div>
+  <div class="row">
+    <div class="span1"></div>
+    <div class="span10">    
+      <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- bottom-banner -->
+      <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5053630439831931"
+        data-ad-slot="3313792403"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
   </div>
 </div>
