--- a/public/partials/recomms.html
+++ b/public/partials/recomms.html
@@ -39,7 +39,15 @@
   <div class="row">
     <div class="span1"></div>
     <div class="span10">    
-      Google Ad goes here...
+      <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- bottom-banner -->
+      <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5053630439831931"
+        data-ad-slot="3313792403"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
   </div>
 </div> 
