updated google ad

--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -64,14 +64,14 @@
   <div class="row">
     <div class="span1"></div>
     <div class="span10">    
-      <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- bottom-banner -->
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Steam Recommender -->
       <ins class="adsbygoogle"
-        style="display:inline-block;width:728px;height:90px"
-        data-ad-client="ca-pub-5053630439831931"
-        data-ad-slot="3313792403"></ins>
+           style="display:inline-block;width:728px;height:90px"
+           data-ad-client="ca-pub-5053630439831931"
+           data-ad-slot="3692760800"></ins>
       <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
+      (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
     </div>
   </div>
