--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -64,15 +64,9 @@
   <div class="row">
     <div class="span1"></div>
     <div class="span10">    
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- Steam Recommender -->
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:728px;height:90px"
-           data-ad-client="ca-pub-5053630439831931"
-           data-ad-slot="3692760800"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <center>
+        <iframe src="http://rcm-na.amazon-adsystem.com/e/cm?t=steamrecom-20&o=1&p=26&l=ur1&category=videogames&banner=1620DM2X8DSD2PK5Q6R2&f=ifr" width="468" height="60" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+      </center>
     </div>
   </div>
 </div>
