--- a/public/partials/steamid.html
+++ b/public/partials/steamid.html
@@ -9,7 +9,7 @@
       </a>
       <br /><br />
       <p>Login with Steam and we can automatically generate a profile with recommendations for you.  
-      At not time do we have access to your steam credentials or any private information.</p>
+      At no time do we have access to your steam credentials or any private information.</p>
 
       <form ng-submit="setSteamId()">
         <fieldset>
