Added steam lookup functionality and detials.
We can now search for a steam id given the community url or community
persona.

We also updated the visuals of the profile and recommendation pages to
include additional information about the user we are display information
about.

--- a/public/partials/recomms.html
+++ b/public/partials/recomms.html
@@ -1,5 +1,6 @@
 
 <div class="container marketing">
+  <profile></profile>
   <div class="row">
     <div class="span1"></div>
     <div class="span10">
