--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,5 +1,6 @@
 
 <div class="container marketing">
+  <profile></profile>
   <div class="row">
     <div class="span2"></div>
     <div class="span8">
