updated steam img link

--- a/public/partials/game.html
+++ b/public/partials/game.html
@@ -5,7 +5,7 @@
     <div class="span10">
       <center>
         <a ng-href="http://store.steampowered.com/app/{{id}}">
-          <img ng-src="http://cdn2.steampowered.com/v/gfx/apps/{{id}}/header_292x136.jpg" width="200px" />
+          <img ng-src="http://cdn.akamai.steamstatic.com/steam/apps/{{id}}/header_292x136.jpg" width="200px" />
         </a>
         <h1>
           <a ng-href="http://store.steampowered.com/app/{{id}}/">
