Updated front page to just point to steamid

--- a/public/partials/steamid.html
+++ b/public/partials/steamid.html
@@ -1,19 +1,20 @@
+<div class="container marketing">
 
   <div class="span1"></div>
   <div class="span10">
     <div class="row">
       <h2>Steam Id</h2>
-      <p>Welcome to Steam Recommender.  Enter your unique Steam ID in order to 
-      generate a profile and personalized recommendations. If you are not sure 
+      <p>Welcome to Steam Recommender.  Enter your unique Steam ID in order to
+      generate a profile and personalized recommendations. If you are not sure
       what your Steam ID, then enter your custom URL (also known as a vanity URL)
-      and we can search for your Steam ID for you.  If you are still unsure what 
+      and we can search for your Steam ID for you.  If you are still unsure what
       to input, we suggest logging into Steam (below) and finding your URL information
       that way.</p>
     </div>
     <div class="row">
       <div class="input-group">
-        <input type="text" class="span6 input-large" 
-        ng-model="userEntry" ng-enter="searchSteamId()" ng-keypress="isCollapsed = true" 
+        <input type="text" class="span6 input-large"
+        ng-model="userEntry" ng-enter="searchSteamId()" ng-keypress="isCollapsed = true"
         placeholder="http://steamcommunity.com/id/<customURL> OR <customURL>">
         <span class="input-group-btn">
           <button class="btn btn-default" type="button" ng-click="searchSteamId()">Submit</button>
@@ -46,10 +47,11 @@
         <img src="http://cdn.steamcommunity.com/public/images/signinthroughsteam/sits_large_border.png" />
       </a>
       <br /><br />
-      <p>Login with Steam and we can automatically generate a profile with recommendations for you.  
+      <p>Login with Steam and we can automatically generate a profile with recommendations for you.
       At no time do we have access to your steam credentials or any private information.</p>
     </div>
     <hr />
   </div>
 
-    
+
+</div>
